[gd_scene load_steps=5 format=3 uid="uid://d2so5me225hvr"]

[ext_resource type="Script" uid="uid://c2xi5lh52aik5" path="res://Scripts/UI/Views/ProjectMenuActions.gd" id="1_qee6b"]
[ext_resource type="PackedScene" uid="uid://bxmpb31w1mmhm" path="res://Scenes/PackageProjectWindow.tscn" id="2_gfvo3"]
[ext_resource type="PackedScene" uid="uid://dkq6u46fmhw60" path="res://Scenes/UnpackageProjectWindow.tscn" id="2_ktass"]

[sub_resource type="LabelSettings" id="LabelSettings_xgnui"]
font_size = 12
font_color = Color(0.631373, 0.631373, 0.631373, 1)

[node name="ProjectManagement" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("1_qee6b")

[node name="fdgOpenProject" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(700, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.minproj")

[node name="fdgSaveAs" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Save the project"
size = Vector2i(700, 500)
exclusive = false
access = 2
filters = PackedStringArray("*.minproj")

[node name="UnpackageProjectWindow" parent="." instance=ExtResource("2_ktass")]
unique_name_in_owner = true
visible = false

[node name="PackageProjectWindow" parent="." instance=ExtResource("2_gfvo3")]
unique_name_in_owner = true
visible = false

[node name="ExitConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Are you sure?"
position = Vector2i(0, 36)
size = Vector2i(277, 173)
exclusive = false
ok_button_text = "Save"
dialog_text = "Do you want to save the project?"

[node name="v" type="VBoxContainer" parent="ExitConfirmationDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 269.0
offset_bottom = 124.0

[node name="DummyLabel" type="Label" parent="ExitConfirmationDialog/v"]
layout_mode = 2

[node name="Label" type="Label" parent="ExitConfirmationDialog/v"]
layout_mode = 2
text = "Select editors you with to save:"

[node name="NoteLabel" type="Label" parent="ExitConfirmationDialog/v"]
layout_mode = 2
text = "Ctrl + LMB to (de)select"
label_settings = SubResource("LabelSettings_xgnui")

[node name="ItemList" type="ItemList" parent="ExitConfirmationDialog/v"]
layout_mode = 2
select_mode = 1
allow_reselect = true
auto_height = true

[connection signal="file_selected" from="fdgOpenProject" to="." method="_on_fdg_open_project_file_selected"]
[connection signal="file_selected" from="fdgSaveAs" to="." method="_on_fdg_save_as_file_selected"]
[connection signal="canceled" from="ExitConfirmationDialog" to="." method="_on_exit_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ExitConfirmationDialog" to="." method="_on_exit_confirmation_dialog_confirmed"]
[connection signal="custom_action" from="ExitConfirmationDialog" to="." method="_on_exit_confirmation_dialog_custom_action"]
